tests/miniJava/neg/006544_mutation.MiniJava
class java { public static void Main ( String [ ] public int [] java ( ) { return 0 ; } ) { { } } }
